force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__Percentage__c.field-meta.xml
<CustomField>
    <fullName>blng__Percentage__c</fullName>
    <inlineHelpText>Enter a percent value</inlineHelpText>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>