force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueFinanceBook__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Lookup to the finance book</inlineHelpText>
    <label>Revenue Finance Book</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>blng__FinanceBook__c.blng__PeriodType__c</field>
            <operation>equals</operation>
            <value>Revenue</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Revenue Recognition Treatments (Revenue Finance Book)</relationshipLabel>
    <relationshipName>FinanceBookRevenueRecognitionTreatments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>