force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueLegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the legal entity for this revenue</inlineHelpText>
    <label>Revenue Legal Entity</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Revenue Recognition Treatments (Revenue Legal Entity)</relationshipLabel>
    <relationshipName>LegalEntityRevenueRecognitionTreatments</relationshipName>
    <type>Lookup</type>
</CustomField>