force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__RevenueRecognitionRule__c.field-meta.xml
<CustomField>
    <fullName>blng__RevenueRecognitionRule__c</fullName>
    <label>Revenue Recognition Rule</label>
    <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
    <relationshipLabel>Revenue Recognition Treatments</relationshipLabel>
    <relationshipName>RevenueRecognitionTreatments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>