force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__Type__c.field-meta.xml
<CustomField>
    <fullName>blng__Type__c</fullName>
    <inlineHelpText>How the amount will be calculated - percent of total, flat amount, or remainder after other treatments are processed.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RevenueRecognitionTreatmenType</valueSetName>
    </valueSet>
</CustomField>