force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/fields/blng__ValidateResult__c.field-meta.xml
<CustomField>
    <fullName>blng__ValidateResult__c</fullName>
    <label>Validate Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>