force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__AGREEMENT_ASSOC_VALIDONLYFOROPACTIVATION.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__AGREEMENT_ASSOC_VALIDONLYFOROPACTIVATION</fullName>
    <active>true</active>
    <description>Revenue Agreement Association setting is only valid if Revenue Schedules are created on Order Product Activation.</description>
    <errorConditionFormula>OR(
            AND(
            (!ISPICKVAL(blng__RevenueScheduleCreationAction__c, &apos;Order Activation&apos;)),
            (ISPICKVAL(blng__RevenueAgreementAssociation__c, &apos;New Agreement&apos;))
            ),
            AND(
            (!ISPICKVAL(blng__RevenueScheduleCreationAction__c, &apos;Order Activation&apos;)),
            (ISPICKVAL(blng__RevenueAgreementAssociation__c, &apos;Revised Order Product&apos;))
            )
            )</errorConditionFormula>
    <errorMessage>If Revenue Schedule Creation is not Order Product Activation, Revenue Agreement Association must be “Not Applicable” or “Manual”</errorMessage>
</ValidationRule>