force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__Flat_Amount_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__Flat_Amount_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(blng__FlatAmount__c) &amp;&amp; ISPICKVAL( blng__Type__c, &apos;Flat Amount&apos;)</errorConditionFormula>
    <errorDisplayField>blng__FlatAmount__c</errorDisplayField>
    <errorMessage>If type is &quot;Flat Amount&quot;, Flat Amount is mandatory to populate.</errorMessage>
</ValidationRule>