force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__Flat_Amount_Value_more_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__Flat_Amount_Value_more_than_zero</fullName>
    <active>true</active>
    <description>Amount must be equal to or greater than zero</description>
    <errorConditionFormula>IF((!ISBLANK(blng__FlatAmount__c)) &amp;&amp; blng__FlatAmount__c &lt; 0, True, False)</errorConditionFormula>
    <errorMessage>Flat Amount Cannot be less than Zero</errorMessage>
</ValidationRule>