force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__Percentage_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__Percentage_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(blng__Percentage__c) &amp;&amp; ISPICKVAL( blng__Type__c, &apos;Percentage&apos;)</errorConditionFormula>
    <errorDisplayField>blng__Percentage__c</errorDisplayField>
    <errorMessage>If type is &quot;Percentage&quot;, Percentage is mandatory to populate.</errorMessage>
</ValidationRule>