force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__PERCENTAGE_MUST_BE_LESS_THAN_HUNDRED.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__PERCENTAGE_MUST_BE_LESS_THAN_HUNDRED</fullName>
    <active>true</active>
    <description>PERCENTAGE MUST BE LESS THAN HUNDRED</description>
    <errorConditionFormula>blng__Percentage__c  &gt; 1.0</errorConditionFormula>
    <errorMessage>Percentage Cannot be greater than 100</errorMessage>
</ValidationRule>