force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__Percentage_Value_more_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__Percentage_Value_more_than_zero</fullName>
    <active>true</active>
    <description>Percentage must be equal to or greater than zero</description>
    <errorConditionFormula>IF((!ISBLANK(blng__Percentage__c))  &amp;&amp;  blng__Percentage__c &lt;= 0, True, False)</errorConditionFormula>
    <errorMessage>Percentage must be greater than zero</errorMessage>
</ValidationRule>