force-app/main/default/objects/blng__RevenueRecognitionTreatment__c/validationRules/blng__Processing_Order_Cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>blng__Processing_Order_Cannot_be_negative</fullName>
    <active>true</active>
    <description>Processing Order Cannot be Negative</description>
    <errorConditionFormula>blng__ProcessingOrder__c  &lt; 0</errorConditionFormula>
    <errorMessage>Processing Order cannot be Negative</errorMessage>
</ValidationRule>